--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-toggleable-md" id="navbarResponsive">
         <ul class="nav navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#main">Головна <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -29,39 +29,6 @@
         </ul>
     </div>
 </nav>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div id="carousel-example-generic" class="carousel slide row" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <img src="assets/img/example.png" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/example.png" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/example.png" alt="Third slide">
-                    </div>
-                </div>
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="icon-prev" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="icon-next" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
 
 <div ng-view></div>
 
