--- a/app/index.html
+++ b/app/index.html
@@ -17,20 +17,20 @@
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
     <div class="collapse navbar-toggleable-md" id="navbarResponsive">
         <ul class="nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#main">Головна <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="#main">Головна</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#wanga">Wanga</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#zet">Zet</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div ng-view></div>
+<div class="container-fluid" ng-view></div>
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
