--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#zet">Zet</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#analyze">Аналіз</a>
+            </li>
         </ul>
     </div>
 </nav>
@@ -36,6 +39,7 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/chart.js/dist/Chart.js"></script>
 <script src="assets/js/app.js"></script>
 
 </body>
