--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,9 @@
 
 <body>
 <nav class="navbar navbar-light bg-faded">
-    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+    <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
-    <div class="collapse navbar-toggleable-md" id="navbarResponsive">
+    <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#main">Головна</a>
